--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.pageContainer {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  place-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.searchBoxContainer {
+  display: flex;
+  width: 60%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.searchBox {
+  flex-grow: 1;
+  margin-left: 1rem;
 }
+
+.searchBox:focus {
+  border: 2px solid blue;
+}
+
+.historicalPowersContainer {
+    width: 60%;
+    margin: .5rem 0rem;
+    background-color: black;
+    text-align: center;
+    height: 650px;
+    overflow: scroll;
+}
+
